# rk2

./: CMakeLists.txt  Singleton.cpp  Singleton.h  test.cpp
.github/workflows/: build.yml
src/: Singleton.cpp  Singleton.h  main.cpp
tests/: test_Singleton.cpp
